--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="purple_order_history">#6200EE</color>
-    <color name="red">#C1292E</color>
+<!--    <color name="purple_order_history">#6200EE</color>-->
+<!--    <color name="red">#C1292E</color>-->
 </resources>
