--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_red">#A41012</color>
+    <color name="grey">#D9D9D9</color>
+    <color name="light_grey">#F5F6FA</color>
 </resources>
