--- a/app/src/main/res/drawable/pin_box.xml
+++ b/app/src/main/res/drawable/pin_box.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/light_gray"/> <!-- Background color -->
+    <solid android:color="@color/light_grey"/> <!-- Background color -->
     <corners android:radius="8dp"/> <!-- Rounded corners -->
     <size android:width="35dp" android:height="35dp"/> <!-- Box size -->
     <stroke android:width="0dp" android:color="@color/red"/> <!-- Border color -->
