--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -8,30 +8,23 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <!-- Custom Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/white"
-        android:elevation="4dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp">
-
-        <!-- Left: Back Arrow -->
-        <ImageView
-            android:id="@+id/ivBack"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/backbtn"
-            android:layout_gravity="start"
-            android:layout_marginBottom="8dp"/>
-    </androidx.appcompat.widget.Toolbar>
-
+    <!-- Back Button -->
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/backbtn"
+        android:contentDescription="Back"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_margin="30dp"
+        android:scaleType="fitCenter"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="-60dp"
         android:padding="16dp">
 
         <LinearLayout
@@ -47,7 +40,7 @@
                 android:id="@+id/imgAppLogo"
                 android:layout_width="100dp"
                 android:layout_height="90dp"
-                android:src="@drawable/logo_img"
+                android:src="@drawable/ak_logo"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:layout_gravity="center"
@@ -235,7 +228,7 @@
                 android:layout_height="wrap_content"
                 android:text="Submit"
                 android:textAllCaps="false"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="@android:color/holo_red_dark"
                 android:textColor="@android:color/white"
                 android:enabled="false" />
