--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,29 +5,57 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@android:color/white"
     tools:context=".MainActivity">
 
-    <!-- Bottom Navigation Bar -->
+    <!-- Bottom Navigation Bar
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottomNavigationView"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottomnav_background"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginTop="20dp"
         android:elevation="50dp"
         app:menu="@menu/bottomnav_menu"
         app:itemIconTint="@drawable/item_selector"
         app:itemTextColor="@drawable/item_selector"
         style="@style/NoRippleEffect"
-        android:paddingBottom="2dp"
-        android:paddingTop="12dp"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
         app:itemTextAppearanceActive="@style/BottomNavTextStyle"
         app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
         app:labelVisibilityMode="labeled" />
-    <!-- Bottom Navigation Bar Ends -->
+    Bottom Navigation Bar Ends -->
+
+    <!-- Logo ImageView -->
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:src="@drawable/ak_logo"
+        android:contentDescription="Logo"
+        android:layout_marginTop="-40dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <!-- Welcome Text -->
+    <TextView
+        android:id="@+id/launchtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comfort Food,\nCampus Style!"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"
+        android:layout_below="@+id/logo" />
 
 </RelativeLayout>
