--- a/app/src/main/res/layout/activity_payment_success.xml
+++ b/app/src/main/res/layout/activity_payment_success.xml
@@ -6,6 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".Payment">
 
     <!-- Back Button -->
@@ -93,7 +94,7 @@
             android:layout_weight="0.5"
             android:layout_marginBottom="8dp"
             android:layout_height="3dp"
-            android:background="@color/gray"
+            android:background="@color/grey"
             android:layout_gravity="center_vertical"/>
 
         <!-- Step 2 -->
@@ -129,7 +130,7 @@
             android:layout_weight="0.5"
             android:layout_height="3dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/gray"
+            android:background="@color/grey"
             android:layout_gravity="center_vertical"/>
 
         <!-- Step 3 (Inactive) -->
@@ -200,25 +201,32 @@
         android:fontFamily="sans-serif" />
 
     <!-- Bottom Navigation Bar -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomNavigationView"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bottomnav_background"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="20dp"
-        android:elevation="50dp"
-        app:menu="@menu/bottomnav_menu"
-        app:itemIconTint="@drawable/item_selector"
-        app:itemTextColor="@drawable/item_selector"
-        style="@style/NoRippleEffect"
-        android:paddingBottom="2dp"
-        android:paddingTop="12dp"
-        app:itemTextAppearanceActive="@style/BottomNavTextStyle"
-        app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
-        app:labelVisibilityMode="labeled" />
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="50dp"
+        app:cardBackgroundColor="@android:color/white">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bottomnav_background"
+            app:menu="@menu/bottomnav_menu"
+            android:paddingTop="5dp"
+            android:layout_marginBottom="-10dp"
+            app:itemIconTint="@drawable/item_selector"
+            app:itemTextColor="@drawable/item_selector"
+            style="@style/NoRippleEffect"
+            app:itemTextAppearanceActive="@style/BottomNavTextStyle"
+            app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
+            app:labelVisibilityMode="labeled" />
+
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
