--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -5,7 +5,6 @@
     android:padding="20dp"
     android:background="@color/white">
 
-
     <ImageButton
         android:id="@+id/backButton"
         android:layout_width="30dp"
@@ -27,7 +26,7 @@
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/AK_Logo" />
+        android:src="@drawable/ak_logo" />
 
     <!-- Welcome Text -->
     <TextView
@@ -114,7 +113,7 @@
     <!-- Login Button -->
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_below="@id/termsConditions"
         android:layout_marginTop="30dp"
