--- a/app/src/main/res/layout/invoice_item_order.xml
+++ b/app/src/main/res/layout/invoice_item_order.xml
@@ -149,7 +149,7 @@
                     android:layout_width="40dp"
                     android:layout_height="3dp"
                     android:layout_marginBottom="15dp"
-                    android:background="@color/gray"
+                    android:background="@color/grey"
                     android:layout_gravity="center"/>
 
                 <LinearLayout
@@ -184,7 +184,7 @@
                 <View
                     android:layout_width="40dp"
                     android:layout_height="3dp"
-                    android:background="@color/gray"
+                    android:background="@color/grey"
                     android:layout_marginBottom="15dp"
                     android:layout_gravity="center"/>
 
