--- a/app/src/main/res/layout/item_favorite_card.xml
+++ b/app/src/main/res/layout/item_favorite_card.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:background="@android:color/white"
     android:padding="8dp">
 
     <!-- CardView (Food Item) -->
