--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_red">#A41012</color>
     <color name="grey">#D9D9D9</color>
-    <color name="light_grey">#F5F6FA</color>
+    <color name="light_grey">#D3D3D7</color>
+    <color name="red">#A41012</color>
+    <color name="transparent">#00000000</color>
+    <color name="orange">#FF8C00</color>
 </resources>
